--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
     "swiper": "^8.3.2"
