--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "hamburger-react": "^2.5.0",
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "next": "12.2.5",
