--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@highcharts/map-collection": "^2.0.1",
+    "antd": "^4.23.0",
     "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
